# rootkitty

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  package.json  pnpm-lock.yaml  test_recovery.rs
crates/rootkitty/: Cargo.toml
crates/rootkitty/benches/: scanner_bench.rs
crates/rootkitty/migrations/: 20250101000000_initial.sql  20250102000000_add_paused_status.sql  20250103000000_per_scan_tables.sql
crates/rootkitty/src/: db.rs  lib.rs  main.rs  scanner.rs  settings.rs  ui.rs
crates/rootkitty/src/ui/: mod.rs  scan_tree.rs  tree.rs  treemap.rs  types.rs
crates/rootkitty/tests/: integration_test.rs
docs/: README.md  architecture.md  database.md  development.md  user-guide.md
