[workspace]
resolver = "2"
members = ["crates/rootkitty"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["alex@kesling.co"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/akesling/rootkitty"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Performance
rayon = "1.10"

# Testing
tempfile = "3.14"
